--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,7 @@ Post-v2.9.0
      * implemented icmp4/icmp6/tcp_reset actions in order to drop the packet
        and reply with a RST for TCP or ICMPv4/ICMPv6 unreachable message for
        other IPv4/IPv6-based protocols whenever a reject ACL rule is hit.
+     * ACL match conditions can now match on Port_Groups.
 
 v2.9.0 - 19 Feb 2018
 --------------------
