--- a/NEWS
+++ b/NEWS
@@ -83,6 +83,8 @@ v2.9.0 - 19 Feb 2018
           "management" statistics.
         - ovs-ofctl dump-ports command now prints new of set custom statistics
           if available (for OpenFlow 1.4+).
+     * Switch from round-robin allocation of rxq to pmd assignments to a
+       utilization-based allocation.
      * New appctl command 'dpif-netdev/pmd-rxq-rebalance' to rebalance rxq to
        pmd assignments.
      * Add rxq utilization of pmd to appctl 'dpif-netdev/pmd-rxq-show'.
