--- a/NEWS
+++ b/NEWS
@@ -15,7 +15,8 @@ Post-v2.9.0
    - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
    - OpenFlow:
      * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.
-     * OpenFlow 1.5 extensibile statistics (OXS) now implemented.
+     * OpenFlow 1.5 extensible statistics (OXS) now implemented.
+     * New OpenFlow 1.0 extensions for group support.
    - Linux kernel 4.14
      * Add support for compiling OVS with the latest Linux 4.14 kernel
    - ovn:
