--- a/lib/dpctl.man
+++ b/lib/dpctl.man
@@ -119,7 +119,7 @@ flow. As an example, \fBfilter='tcp,tp_src=100'\fR will match the
 datapath flow containing '\fBtcp(src=80/0xff00,dst=8080/0xff)\fR'.
 .IP
 If \fBtype=\fItype\fR is specified, only displays flows of a specific type.
-\fItype\fR can be \fBoffloaded\fR to display only offloaded rules or \fBOVS\fR
+\fItype\fR can be \fBoffloaded\fR to display only offloaded rules or \fBovs\fR
 to display only non-offloaded rules.
 By default both offloaded and non-offloaded rules are displayed.
 .
