--- a/NEWS
+++ b/NEWS
@@ -25,7 +25,7 @@ Post-v2.9.0
      * Add support for compiling OVS with the latest Linux 4.14 kernel.
      * Added support for meters.
    - ovn:
-     * implemented icmp4/icmp6/tcp_reset actions in order to drop the packet
+     * Implemented icmp4/icmp6/tcp_reset actions in order to drop the packet
        and reply with a RST for TCP or ICMPv4/ICMPv6 unreachable message for
        other IPv4/IPv6-based protocols whenever a reject ACL rule is hit.
      * ACL match conditions can now match on Port_Groups as well as address
@@ -85,6 +85,7 @@ v2.9.0 - 19 Feb 2018
        - Added support to generate Neighbor Solicitation packets using the OVN
          action 'nd_ns' to resolve unknown next hop MAC addresses for the
          IPv6 packets.
+     * Add support for QoS bandwidth limit with DPDK.
      * ovn-ctl: New commands run_nb_ovsdb and run_sb_ovsdb.
      * ovn-sbctl, ovn-nbctl: New options --leader-only, --no-leader-only.
    - OpenFlow:
@@ -178,7 +179,6 @@ v2.8.0 - 31 Aug 2017
        gateway.
      * Add support for ACL logging.
      * ovn-northd now has native support for active-standby high availability.
-     * Add support for QoS bandwidth limt with DPDK.
    - Tracing with ofproto/trace now traces through recirculation.
    - OVSDB:
      * New support for role-based access control (see ovsdb-server(1)).
