--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Post-v2.9.0
---------------------
+v2.10.0 - xx xxx xxxx
+---------------------
    - ovs-vswitchd and utilities now support DNS names in OpenFlow and
      OVSDB remotes.
    - ovs-vswitchd:
