--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Post-v2.10.0
+---------------------
+
+
 v2.10.0 - xx xxx xxxx
 ---------------------
    - ovs-vswitchd and utilities now support DNS names in OpenFlow and
