--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openvswitch (2.10.90-1) unstable; urgency=low
+
+   * New upstream version
+
+ -- Open vSwitch team <dev@openvswitch.org>  Tue, 24 Jul 2018 15:29:17 -0700
+
 openvswitch (2.10.0-1) unstable; urgency=low
 
    * New upstream version
