--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ Post-v2.10.0
 ---------------------
    - Linux datapath:
      * Support for the kernel versions 4.16.x and 4.17.x.
+   - OpenFlow:
+     * OFPMP_TABLE_FEATURES_REQUEST can now modify table features.
+   - ovs-ofctl:
+     * "mod-table" command can now change OpenFlow table names.
    - The environment variable OVS_SYSLOG_METHOD, if set, is now used
      as the default syslog method.
    - The environment variable OVS_CTL_TIMEOUT, if set, is now used
