--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ Post-v2.11.0
    - DPDK:
      * New option 'other_config:dpdk-socket-limit' to limit amount of
        hugepage memory that can be used by DPDK.
+   - OpenFlow:
+     * Removed support for OpenFlow 1.6 (draft), which ONF abandoned.
    - Userspace datapath:
      * ICMPv6 ND enhancements: support for match and set ND options type
        and reserved fields.
