--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Post-v2.10.0
+v2.11.0 - xx xxx xxxx
 ---------------------
    - Linux datapath:
      * Support for the kernel versions 4.16.x and 4.17.x.
