--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openvswitch (2.11.90-1) unstable; urgency=low
+
+   * New upstream version
+
+ -- Open vSwitch team <dev@openvswitch.org>  Sat, 20 Jan 2019 13:28:37 -0700
+
 openvswitch (2.11.0-1) unstable; urgency=low
 
    * New upstream version
