datapath: Add support for kernel 4.18.x
No code changing is necessary to support 4.18.x.

Only one kernel test failed and it is in the process of being fixed.

Updated .travis.yml to include 4.18.x and also use latest 4.17 version.
Updated test files to test 4.18 kernel.

Tested-by: Greg Rose <gvrose8192@gmail.com>
Reviewed-by: Greg Rose <gvrose8192@gmail.com>
Signed-off-by: Yifeng Sun <pkusunyifeng@gmail.com>
Signed-off-by: Ben Pfaff <blp@ovn.org>

--- a/NEWS
+++ b/NEWS
@@ -52,7 +52,8 @@ v2.11.0 - xx xxx xxxx
    - RHEL packaging:
      * OVN packages are split from OVS packages. A new spec
        file - ovn-fedora.spec.in is added to generate OVN packages.
-
+   - Linux datapath:
+     * Support for the kernel versions 4.18.x
 
 v2.10.0 - 18 Aug 2018
 ---------------------
